# SDL-Gamedev-Cpp

./: CMakeLists.txt  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  TextureManager.cpp  TextureManager.hpp  main.cpp
.github/workflows/: main.yml
